# visiumlint

./: .bumpversion.cfg  .pre-commit-hooks.yaml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cd.yaml  cd.yml  cd_calls.yaml  ci.yml
src/visiumlint/: __init__.py  main.py
