[project]
name = "visiumlint"
dynamic = ["version"]
description = "All of your favorite linters and formatters gathered in a single command."
dependencies = ["black", "isort", "mypy", "pydocstyle", "pylint", "typer"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
visiumlint = "visiumlint.main:main"

[tool.setuptools_scm]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams, pylint.extensions.docstyle"

[tool.pylint.messages_control]
disable = """
fixme,
too-few-public-methods,
"""

[tool.pylint.basic]
variable-rgx = "^[a-z][a-z0-9_]*$"
argument-rgx = "^[a-z][a-z0-9_]*$"

[tool.pylint.format]
max-line-length = "200"

[tool.pydocstyle]
add-ignore = "D107, D104, D103"
convention = "google"